metadata/force-app/main/default/objects/CustomName_AmwKJ__c/CustomName_AmwKJ__c.object-meta.xml
<CustomObject>
    <description>Description_wZjjZ</description>
    <label>CustomLabel_FUKgI</label>
    <nameField>
        <label>CustomLabel_FUKgI</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_FUKgIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>