metadata/force-app/main/default/objects/CustomName_AmwKJ__c/fields/CustomField_cQKhK__c.field-meta.xml
<CustomField>
    <fullName>CustomField_cQKhK__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldYLFCT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>